--- a/checkout/index.html
+++ b/checkout/index.html
@@ -498,7 +498,7 @@ document.addEventListener("DOMContentLoaded", function () {
     Clique no botão abaixo para prosseguir com o pagamento:
   </p>
 
-  <a href="	https://comprasseguradaonline.store/c/ac2de4d0a7" id="btnCheckout" class="checkout-button">
+  <a href="	https://go.disruptybr.com.br/thfho5kizz" id="btnCheckout" class="checkout-button">
     <i class="fa-solid fa-lock"></i> Pagar agora
   </a>
 </div>
