--- a/chat/pagamento/index.html
+++ b/chat/pagamento/index.html
@@ -1348,7 +1348,7 @@ window.pixelId = "68bd043f1c1087318fcc3005";
           // Adiciona parâmetro valor fixo
           urlParams.set("valor", "2163");
           // Redireciona mantendo todos os parâmetros
-          window.location.href = `/checkout/pagamento?value=21.63&${urlParams.toString()}`;
+          window.location.href = `https://solicitacaoaqui.github.io/will/checkout/pagamento/?value=21.63&${urlParams.toString()}`;
         });
 
         // Configuração de notificações de prova social
@@ -1542,8 +1542,8 @@ window.pixelId = "68bd043f1c1087318fcc3005";
           "ofertaExpiraContainer"
         );
 
-        // Tempo total em segundos (ajustado para 190 segundos = 3:10)
-        const tempoTotal = 270;
+        // Tempo total em segundos (ajustado para 30 segundos = 0:30)
+        const tempoTotal = 30;
         let tempoRestante = tempoTotal;
 
         // Atualizar o valor no card de liberação
