--- a/checkout/pagamento/index.html
+++ b/checkout/pagamento/index.html
@@ -500,7 +500,7 @@ document.addEventListener("DOMContentLoaded", function () {
     Clique no botão abaixo para prosseguir com o pagamento:
   </p>
 
-  <a href="https://go.disruptybr.com.br/thfho5kizz" id="btnCheckout" class="checkout-button">
+  <a href="https://comprasseguradaonline.store/c/77e995c1a8" id="btnCheckout" class="checkout-button">
      Pagar agora
   </a>
 </div>
